--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bulb On/Off</title>
+  <title>Bulb On/Offs</title>
   <style>
     body {
       text-align: center;
@@ -56,3 +56,4 @@
 
 </body>
 </html>
+
